munin (work)

  * Main: Allow dots in PNG paths (patch by Jacques Caruso).
  * Munin-html: Properly size table below graphs in service-view.
  * Plugins: generic/sendmail_mail{stats,traffic} updated.
  * Plugins: Made generic/samba more portable.

munin (1.1.9)

  * Main: Optimised munin-cgi-graph a bit.
  * Main: Internal name (for use in munin.conf) added to the table in
    service view.
  * Main: Added option cgiurl_graph.
  * Main: Bugfix when using long labels and CGI graphing.
  * Node: Fix bug when encountering strange environment (Deb#285173).
  * Node: Remove hardcoding of default user/group to run the plugin as
    (SF#1083251).
  * Packaging: Expand man-page macros properly on man-page generation 
    (Deb#286399).
  * Plugin: Added plugin generic/dhcpd3, created by Rune N. Skillingstad.
  * Plugin: Patch generic/bind9 to report "unnamed" as "other" (Nicolas 
    Stransky).
  * Plugin: linux/apt* has been forced to LANG=C, to get predictable output.
  * Plugin: Removed hardcoded host_name in linux/cps_.
  * Plugin: Added plugin linux/users, created by Michael Kaiser.
  * Plugin: Cleaned up generic/samba a bit (SF#1087961).

munin (1.1.8)

  * Munin-limits: Log less noise.
  * Munin-limits: Notify correctly in all situations.
  * Munin-graph: Treat CDEFs in fields with long names properly.
  * Munin-graph: Log an illegal STACK in the first field better (SF#1081903).
  * Munin-run: Now behaves properly when running invalid plugins (SF#1074242).
  * Munin-node: host_name in plugin-conf.d now overrides plugin output.
  * Munin-graph: Added "graph_period" option, to make "graph_sums" usable.
  * Munin-update: Fix bug when setting min to 0.
  * Munin-node-configure: Fix bug with underscore in wildcard plugins.
  * Plugin: New version of generic/smart_ by plugin creator (Nicolas
    Stransky) (SF#1072459).
  * Plugin: generic/uptime was re-classified as linux/uptime (SF#1074576).
  * Plugin: Renamed generic/folding@home to generic/foldingathome (SF#1074241).